test_fm/_test46.ref
Error: non-static method 'f' cannot be called with a class as receiver in '_test46.nj' on line 17
